@@ -1,7 +1,7 @@
-$def with (system_id,system_name,project, url, statuscode,statusmessage, errors, errormsg, parameterdata, corpora, outputpaths, inputpaths,outputformats, inputformats, conffile)
+$def with (system_id,system_name,user, project, url, statuscode,statusmessage, errors, errormsg, parameterdata, corpora, outputpaths, inputpaths,outputformats, inputformats, conffile)
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet type="text/xsl" href="$url/static/interface.xsl"?>
-<clam id="$system_id" name="$system_name" project="$project">
+<clam id="$system_id" name="$system_name" project="$project" user="$user">
      $if not conffile:
         <status code="$statuscode" message="$statusmessage" errors="$errors" errormsg="$errormsg" />
      $if statuscode == 0 or statuscode == 2 or conffile:
