@@ -32,3 +32,5 @@ April:
     - Implemented writing configuration file (clam.xml) for the blackbox
     - Made parameter implementation thread-safe
     - Implemented parameter forbid, require
+    - Improved settings import, removed globals
+    - Implemented user authentication
